# adaptive-loop

./: .gitignore  README.md  adaptive_loop_service.py  library-plan.md  pyproject.toml
adaptive_loop/: __init__.py  core.py  exceptions.py
adaptive_loop/adapter/: litellm.py
adaptive_loop/cache/: base.py
adaptive_loop/messages/: registry.py  template.py
adaptive_loop/parser/: base.py  chain.py  strategies.py
adaptive_loop/prompts/: extract_value.yaml  find_field.yaml
adaptive_loop/recorder/: base.py
tests/: test_core.py  test_exceptions.py
tests/test_adapter/: test_litellm.py
tests/test_cache/: test_base.py
tests/test_messages/: test_registry.py  test_template.py
tests/test_parser/: test_base.py  test_chain.py  test_strategies.py
tests/test_recorder/: test_base.py
